test/errors/expressions_error/zs/offsets/string_error.zs
package offsets.string_error;

struct StringError
{
    string offset;
offset:
    uint32 values[];
};
